# last-date

./: .editorconfig  .env.test  .gitignore  .gitmodules  Cargo.toml  README.md  Rocket.toml  usage.md
.github/workflows/: codeql.yml  rust.yml
migrations/2020-04-21-110932_create_tasks/: up.sql
migrations/2020-04-25-053515_add_updated_at_to_task/: down.sql  up.sql
migrations/2020-05-02-030106_add_labels/: down.sql  up.sql
src/: label.rs  main.rs  schema.rs  task.rs  tests.rs
src/models/: label.rs  task.rs
src/routes/: label.rs  task.rs
static/: base.html.tera  base.tera  confirm.tera  detail.tera  index.tera  labelconfirm.tera  labeledit.tera  labellist.tera  mystyles.scss
static/css/: mystyles.css
static/js/: scripts.js
static/label/: confirm.html.tera  confirm.tera  edit.html.tera  index.html.tera  index.tera
static/task/: bylabel.html.tera  bylabel.tera  confirm.html.tera  edit.html.tera  edit.tera  index.html.tera  index.tera
