[package]
name = "last-date"
version = "0.1.0"
authors = ["yammmt <cu.cs.y20@gmail.com>"]
edition = "2018"
repository = "https://github.com/yammmt/last-date.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.4.6"
rocket_contrib = { version = "^0.4.5", default_features = false, features = ["tera_templates", "diesel_sqlite_pool", "serve"] }
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
diesel = { version = "^1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "^1.3"
log = "^0.4"
chrono = { version = "^0.4", features = ["serde"] }
regex = "^1.4"

[dev-dependencies]
parking_lot = { version = "^0.11", features = ["nightly"] }
rand = "^0.7"
