[package]
name = "last-date"
version = "0.1.0"
authors = ["yammmt <cu.cs.y20@gmail.com>"]
edition = "2021"
repository = "https://github.com/yammmt/last-date.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
serde = "1.0.159"
serde_json = "^1.0"
serde_derive = "1.0.126"
diesel = { version = "^1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "^1.3"
log = "^0.4"
chrono = { version = "^0.4", features = ["serde"] }
regex = "^1.7"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]

[dev-dependencies]
parking_lot = "^0.12"
rand = "0.8.5"
