[package]
name = "last-date"
version = "0.1.0"
authors = ["yammmt <cu.cs.y20@gmail.com>"]
edition = "2021"
repository = "https://github.com/yammmt/last-date.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
serde = "1.0.215"
serde_json = "^1.0"
serde_derive = "1.0.126"
diesel = { version = "^2.2", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "^2.2"
log = "^0.4"
chrono = { version = "^0.4", features = ["serde"] }
regex = "^1.11"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]

[dev-dependencies]
parking_lot = "^0.12"
rand = "0.8.5"
